# gpurental

./: Cargo.toml
gpu-hub/: next.config.ts  package-lock.json  package.json
gpu-hub/prisma/: schema.prisma
gpu-hub/prisma/migrations/20250509024752_init/: migration.sql
gpu-hub/prisma/migrations/20250509025743_init/: migration.sql
gpu-hub/src/app/: page.tsx
gpu-hub/src/app/api/: gpus.tsx
gpu-hub/src/app/pages/: dashboard.tsx  login.tsx
src/: main.rs  worker.rs
