[package]
name = "gpu_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "worker"
path = "src/worker.rs"

