[package]
name = "gpu_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = "1.0"
serde_json = "1.0"
uuid = "1.1"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "gpu_server"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

